<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_random"
            android:icon="@drawable/ic_random"
            android:title="@string/nav_random" />
        <item
            android:id="@+id/nav_bmi"
            android:icon="@drawable/ic_bmi"
            android:title="@string/nav_bmi" />

        <item
            android:id="@+id/nav_country"
            android:icon="@drawable/ic_country"
            android:title="@string/nav_country" />
        <item
            android:id="@+id/nav_weather"
            android:icon="@drawable/ic_weather"
            android:title="@string/nav_weather" />
        <item
            android:id="@+id/nav_fragment"
            android:icon="@drawable/ic_fragments"
            android:title="@string/nav_fragments" />
    </group>
<!--
    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>
-->
</menu>
