<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".bmi.BmiActivity">

    <TextView
        android:id="@+id/txtBmi"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:gravity="center"
        android:text="@string/default_bmi"
        android:textSize="50dp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/lblLenght" />

            <EditText
                android:id="@+id/editLenght"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:ems="10"
                android:hint="@string/cm"
                android:inputType="number" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/lblWeight" />

            <EditText
                android:id="@+id/editWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:ems="10"
                android:hint="@string/kg"
                android:inputType="numberDecimal" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btnReset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:onClick="reset"
                android:text="@string/btnReset"></Button>

            <Button
                android:id="@+id/btnCompute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:onClick="compute"
                android:text="@string/btnCompute"></Button>

        </TableRow>
    </TableLayout>
</LinearLayout>
